--- a/1.html
+++ b/1.html
@@ -8,13 +8,23 @@
 	<script type="text/javascript" src="js/sketch.js"></script>
 </head>
 <body>
-
+<div class="helper"></div>
 	<div id="game">
 		<div id="pyramid"></div>
 	</div>
-	<div id="qbert"></div>
-	<button id="lol"></button>
-	<canvas id="sketch" width="1440px" height="800px"></canvas>
+	<div id="game1">
+		<div id="pyramid"></div>
+	</div>
+<!-- 	<div id="game2">
+		<div id="pyramid"></div>
+	</div>
+	<div id="game3">
+		<div id="pyramid"></div>
+	</div> -->
+
+	<!-- <div id="qbert"></div> -->
+	<!-- <button id="lol"></button> -->
+	<!-- <canvas id="sketch" width="1440px" height="800px"></canvas> -->
 
 	<script type="text/javascript">
 		var click = false;
@@ -27,7 +37,20 @@
 			// $('#qbert').css({'margin-top': y-50}); 
 			$('#lol').css({'top': y-20, 'left': x-30}); 
 			$('#sketch').sketch({defaultColor: "#ff0"});
+
+			
 		});
+
+		function boxShadowGeneration(){
+			var block = 2;
+			for (var i = 1; i <= 3; i++) {//i row
+				$('#pyramid').css({'box-shadow': 
+					30px 80px 0 #dde345,
+					80px 30px 0 #dde345,
+				});
+				
+			};	
+		}
 
 		setInterval(movePlane, 20);
 		var keys = {}
@@ -39,6 +62,7 @@
 		$(document).keyup(function(e) {
 			delete keys[e.keyCode];
 		});
+
 
 		function movePlane() {
 			for (var direction in keys) {
