--- a/index.html
+++ b/index.html
@@ -1,66 +1,86 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>@>@</title>
-	<link rel="stylesheet" href="style.css" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>@>@</title>
+  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 </head>
-<body 		
-data-0="background-color: rgb(16,29,48)"
-data-600p="background-color: rgb(168,218,220)"
-data-1100p="background-color: rgb(16,29,48)">
+<body>
 
-<div class ="sun"
-data-0="background:rgb(245,203,92)"
-data-700p="background:rgb(230,57,70)"
-data-1100p="background:rgb(245,203,92)">
-  <img class="sunFlash" src="gif/sunFlash.png">
-</div>
+  <div id="game">     
+    <div class="row0">
+      <div class="p0 pyramid"></div>
+    </div>
+    <div class="row1">
+      <div class="p1 pyramid"></div>
+      <div class="p2 pyramid"></div>
+    </div>
+    <div class="row2">
+      <div class="p3 pyramid"></div>
+      <div class="p4 pyramid"></div>
+      <div class="p5 pyramid"></div>
+    </div>
+    <div class="row3">
+      <div class="p6 pyramid"></div>
+      <div class="p7 pyramid"></div>
+      <div class="p8 pyramid"></div>
+      <div class="p9 pyramid"></div>
+    </div>
+  </div>
 
-<script src="js/skrollr.min.js"></script>
-<script type="text/javascript">
-  var s = skrollr.init({
-    render: function(data) {
-      if(data.curTop >= data.maxTop) {
-        this.setScrollTop(0, true);  
-        doIt();
+
+
+
+  <script type="text/javascript">
+
+    $('.pyramid').click(function(){
+      // $(this).css({'margin-top': '-20px'});
+      //console.log(this);
+      $(this).toggleClass('change');
+      var audio = new Audio('sound/tone.mp3');
+        audio.play();
+    });
+
+    var click = false;
+    $(document).on('mousemove', function(e){
+      var x = e.pageX;
+      var y = e.pageY;
+      // console.log(x);
+      // console.log(y);
+      
+    });
+
+    setInterval(movePlane, 20);
+    var keys = {}
+
+    $(document).keydown(function(e) {
+      keys[e.keyCode] = true;
+    });
+
+    $(document).keyup(function(e) {
+      delete keys[e.keyCode];
+    });
+
+
+    function movePlane() {
+      for (var direction in keys) {
+        if (!keys.hasOwnProperty(direction)) continue;
+        if (direction == 37) {
+          $("#qbert").animate({left: "-=5"}, 0);
+        }
+        if (direction == 38) {
+          $("#qbert").animate({'margin-top': "-=5"}, 0);  
+        }
+        if (direction == 39) {
+          $("#qbert").animate({left: "+=5"}, 0);  
+        }
+        if (direction == 40) {
+          $("#qbert").animate({'margin-top': "+=5"}, 0);  
+        }
       }
     }
-  });
-
-  var i = 0;
-  function doIt( ) {
-
-    var classSet = [
-    '.a1',//0
-    '.a2',
-    '.a3',
-    '.a4',
-    '.a5',
-    '.a6',
-    ];
-    var imageSet = [
-    'cityline.png',//0
-    'train2.gif',
-    'train.gif',
-    'elephant.gif',
-    'lol.png',
-    'lol.png'
-    ];
-
-    $(classSet[i]).append("<img src='gif/"+ imageSet[i] + "'/>");
-    if (classSet[i]=='.a3') {$('.a2').remove();};
-    if (classSet[i]=='.a4') {$('.a1').remove();
-    $('.a4e').append("<img src='gif/elephant.gif'/>");};
-    if (classSet[i]=='.a5') {$('.sun').remove();
-    $('div:first').addClass("sun1");};
-    if (classSet[i]=='.a6') {$('.a3').remove()};  
-    i++;
-
-  }
-
-</script>
+  </script>
 
 </body>
 </html>
